--- a/package.json
+++ b/package.json
@@ -7,18 +7,25 @@
     "start": "ts-node src/main.ts",
     "dev": "ts-node-dev src/main.ts",
     "build": "npx tsc",
-    "lint": "eslint ./src/**/*.ts --fix"
+    "lint": "eslint ./src/**/*.ts --fix",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.13",
     "@types/node": "^22.1.0",
+    "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
     "eslint": "^9.8.0",
     "globals": "^15.9.0",
+    "jest": "^29.7.0",
+    "mongodb-memory-server": "^9.4.1",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.5.4",
@@ -27,8 +34,11 @@
   "dependencies": {
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "reflect-metadata": "^0.2.2",
-    "uuidv4": "^6.2.13"
+    "inversify": "^6.0.2",
+    "mongodb": "^5.9.2",
+    "mongoose": "^7.8.2",
+    "reflect-metadata": "^0.2.2"
   }
 }
